# end-to-end-fog-reproducibility

./: CMakeLists.txt  Readme.md
Elasticity/: CMakeLists.txt  DataSource.cpp  DataSource.hpp  ElasticConfig.hpp  ElasticConfig.hpp.in  ElasticPolicyCPUThreshold.cpp  ElasticTask.cpp  ElasticTask.hpp  RequestType.hpp  TaskInstance.cpp
energy_analysis/: 14APPS_video_cloud.cpp  14APPS_video_cloud_coloc.cpp  14APPS_video_fog.cpp  14APPS_video_fog_coloc.cpp  CMakeLists.txt  Notebook.ipynb  analyse.sh  genPlot.R  gen_ds.py  gen_elasticpools_cloud.py  gen_elasticpools_edge.py  launchAll.sh  launchG5KCloud.sh  launchG5KFog.sh
energy_analysis/config/: 14APPS_cloud.config  14APPS_cloud_coloc.config  14APPS_cloud_elasticpool.config  14APPS_cloud_elasticpool_coloc.config  14APPS_fog.config  14APPS_fog_coloc.config  14APPS_fog_elasticpool.config  14APPS_fog_elasticpool_coloc.config
energy_analysis/res/: parseComDurs.awk  parseEndToEnd.awk  parseEnergy.awk  parseExecDurs.awk  parseLoad.awk  parse_nbInst.awk  parse_nbReq.awk  parse_reqTot.awk
energy_analysis/visualize/: index.html
simulators_comparison/: Readme.md  bench1Hop-exec.sh  bench1Hop-multicore.sh  bench1Hop-net.sh  bench2Hops-exec.sh  bench2Hops-lat.sh  bench2Hops-net.sh  benchDogbone.sh  benchWifi.sh  launchExec.sh  launchExecDelay.sh
simulators_comparison/IFogSim/: Bench1Hop.java  Bench2Hops.java  parseExec.awk  parseIFS.awk  parseIFSdogbone.awk
simulators_comparison/YAFS/: main1_2hops.py  main1_perso.py  main1_semi_db.py  parseYAFS.awk  parseYAFSdogbone.awk
simulators_comparison/ns-3/: Makefile  parseNS.awk  parseNSdogbone.awk  wifiScenario.cpp  wiredScenario.cpp  wired_dogbone.cpp  wired_nhop.cpp
simulators_comparison/real_world/: limit_bw.sh  loop.py  parse_exec.awk  parse_rw.awk  run_exec.sh  run_network.sh  test_enos.py
simulators_comparison/results/: resDogbone.csv  (+11 more)
(+13 files in other folders)
